// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashboardLayout collapsed sidebar not showing snapshot 1`] = `
<Container
  fluid={true}
  size="xl"
>
  <Row>
    <Col
      className="course-list-column"
      lg={
        {
          "offset": 0,
          "span": 12,
        }
      }
      xl={
        {
          "offset": 0,
          "span": 12,
        }
      }
    >
      test-children
    </Col>
    <Col
      className="sidebar-column"
      lg={
        {
          "offset": 0,
          "span": 12,
        }
      }
      xl={
        {
          "offset": 0,
          "span": 4,
        }
      }
    >
      <WidgetSidebarSlot />
    </Col>
  </Row>
</Container>
`;

exports[`DashboardLayout collapsed sidebar showing snapshot 1`] = `
<Container
  fluid={true}
  size="xl"
>
  <Row>
    <Col
      className="course-list-column"
      lg={
        {
          "offset": 0,
          "span": 12,
        }
      }
      xl={
        {
          "offset": 0,
          "span": 8,
        }
      }
    >
      test-children
    </Col>
    <Col
      className="sidebar-column"
      lg={
        {
          "offset": 0,
          "span": 12,
        }
      }
      xl={
        {
          "offset": 0,
          "span": 4,
        }
      }
    >
      <WidgetSidebarSlot />
    </Col>
  </Row>
</Container>
`;

exports[`DashboardLayout not collapsed sidebar not showing snapshot 1`] = `
<Container
  fluid={true}
  size="xl"
>
  <Row>
    <Col
      className="course-list-column"
      lg={
        {
          "offset": 0,
          "span": 12,
        }
      }
      xl={
        {
          "offset": 0,
          "span": 12,
        }
      }
    >
      test-children
    </Col>
    <Col
      className="sidebar-column"
      lg={
        {
          "offset": 0,
          "span": 12,
        }
      }
      xl={
        {
          "offset": 0,
          "span": 4,
        }
      }
    >
      <h2
        className="course-list-title"
      >
         
      </h2>
      <WidgetSidebarSlot />
    </Col>
  </Row>
</Container>
`;

exports[`DashboardLayout not collapsed sidebar showing snapshot 1`] = `
<Container
  fluid={true}
  size="xl"
>
  <Row>
    <Col
      className="course-list-column"
      lg={
        {
          "offset": 0,
          "span": 12,
        }
      }
      xl={
        {
          "offset": 0,
          "span": 8,
        }
      }
    >
      test-children
    </Col>
    <Col
      className="sidebar-column"
      lg={
        {
          "offset": 0,
          "span": 12,
        }
      }
      xl={
        {
          "offset": 0,
          "span": 4,
        }
      }
    >
      <h2
        className="course-list-title"
      >
         
      </h2>
      <WidgetSidebarSlot />
    </Col>
  </Row>
</Container>
`;
